a lot of things happened here

--- a/app/views/artist/artist.html.erb
+++ b/app/views/artist/artist.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
     <div class="entry">
-        <h3 class="h3">practice</h3>
+    <%= render 'artist/condition' %>
         <p><%= link_to '戻る', search_path %></p>
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
-                    <p class="list-group-item">Practice</p>
 
-                        <% @contents.each do |link|  %>
-                            <p class="list-group-item"><%=link %></p>
+                        <% @contents.each do |content|  %>
+                            <p class="list-group-item"><%= truncate(content.to_s, length: 50) %></p>
+                            
                         <% end %>
                     </div>
                     <div class="col-xs-6">
-                        <p class="source list-group-item"><%= link_to 'Practice', songs_path %></p>
                     
                         <% @links.each do |link|  %>
-                            <p class="source list-group-item"><a target="_blank" href=https://www.ufret.jp/<%=link %>>Artist</a></p>
+                            <p class="source list-group-item"><%= link_to 'Artist', save_link_path(link: link), method: :patch %></p>
                         <% end %>
+                    
                     </div>
                 </div>
             </div>
@@ -24,5 +24,7 @@
     </div>
 
     <br>
+    <p><%= link_to '戻る', search_path %></p>
     <p class="source">Scraped from <a target="_blank" href=<%=@url %>>Ufret.com</a></p>
 </div>
+
