--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-           <%= link_to 'My list', '#', class: "nav-link" %>
+           <%= link_to 'My list', mylist_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
            <%= link_to 'Friends', '#', class: "nav-link" %>
