--- a/app/views/user/mylist.html.erb
+++ b/app/views/user/mylist.html.erb
@@ -11,7 +11,9 @@ Lising all songs
                 </div>
                 <div class="col-xs-6">
                     <% @songs.each do |song|  %>
-                        <p class="source list-group-item"><%= link_to 'Song', song.url %></p>
+                        <p class="source list-group-item"><%= link_to 'Song', song.url %> &nbsp &nbsp
+                        <%=link_to "Remove", favsong_path(song),method: :delete, data: {confirm: "Do you wanna save it?"},class:" badge badge-danger text-white" %>
+                        </p>
                     <% end %>
                 </div>
             </div>
