--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
            <%= link_to 'My list', mylist_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-           <%= link_to 'Friends', '#', class: "nav-link" %>
+           <%= link_to 'Friends', friend_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
            <%= link_to 'Search', search_path, class: "nav-link" %>
@@ -25,9 +25,6 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        </li>
-        <li class="nav-item">
-           <%= link_to 'Practice', artist_path, class: "nav-link" %>
         </li>
       </ul>
       <ul class='navbar-nav ml-auto'>
