--- a/app/views/user/mylist.html.erb
+++ b/app/views/user/mylist.html.erb
@@ -1,4 +1,4 @@
-Lising all songs that I'm following
+Lising all <b class="text-success"><%= current_user.songs.count%></b> songs that I'm following
 
 <div class="container">
     <div class="entry">
