--- a/app/views/artist/songs.html.erb
+++ b/app/views/artist/songs.html.erb
@@ -14,7 +14,15 @@
                     <div class="col-xs-6">
                         <% @links.each do |link|  %>
                             <p class="source list-group-item"><a target="_blank" href=https://www.ufret.jp/<%=link %>>Song</a> &nbsp
-                            <%= link_to "Add", save_song_path(link: link), method: :patch,class:" badge badge-success text-white" %>
+                            <% if !(current_user.songs.where(url: "https://www.ufret.jp/" +link).first) %>
+                                <%= link_to "Add", save_song_path(link: link), method: :patch,class:" badge badge-success text-white" %>
+                            <% end %>
+                            
+                            <% @users.each do |user| %>
+                                <% if (user.songs.where(url: "https://www.ufret.jp/" +link).first) && !( user == current_user) %>
+                                    <b><%= truncate(user.email.to_s, length: 15)  %></b>
+                                <% end %>
+                            <% end %>
                             </p>
                         <% end %>
                     </div>
