--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" id="home-container">
   <div class="jumbotron text-center text-white">
     <h1 class="display-4">Nfret</h1>
-    <p class="lead">Ufretは好きだけど月額６５０円は払いたくないっていう人達（オレ）に向けて</p>
+    <p class="lead">Ufretは好きだけど月額６５０円は払いたくないっていう人（オレ）に向けて</p>
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <% if !(current_user)%>
