change the title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Nokonoko</title>
+    <title>Nfret25</title>
     <%= favicon_link_tag asset_path('logo.ico') %>
     
     <%= csrf_meta_tags %>
