--- a/app/views/artist/songs.html.erb
+++ b/app/views/artist/songs.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="entry"> 
         <h3 class="h3">Songs of<%= @artist %></h3>
-        <p><%= link_to '戻る', :back %></p>
+        <p><%= link_to '戻る', search_path %> &nbsp&nbsp&nbsp<%= link_to 'Mylist', mylist_path %></p>
+
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
