--- a/app/views/friend/following.html.erb
+++ b/app/views/friend/following.html.erb
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-xs-6">
                     <% @songs.each do |song|  %>
-                        <p class="list-group-item"><%= song.title %></p>
+                        <p class="list-group-item"><%= truncate(song.title.to_s, length: 25) %></p>
                     <% end %>
                 </div>
                 <div class="col-xs-6">
