--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to 'Nfret', root_path, class: 'navbar-brand text-success' %>
+  <%= link_to 'Nfret25', root_path, class: 'navbar-brand text-success' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,21 +10,10 @@
            <%= link_to 'My list', mylist_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-           <%= link_to 'Friends', friend_path, class: "nav-link" %>
+           <%= link_to 'Other users', friend_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
            <%= link_to 'Search', search_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
         </li>
       </ul>
       <ul class='navbar-nav ml-auto'>
