--- a/app/views/friend/following.html.erb
+++ b/app/views/friend/following.html.erb
@@ -5,15 +5,15 @@
             <div class="row">
                 <div class="col-xs-6">
                     <% @songs.each do |song|  %>
-                        <p class="list-group-item"><%= truncate(song.title.to_s, length: 25) %>  <b>by <%= truncate(song.artist.to_s, length: 25) %></b></p>
-                    <% end %>
-                </div>
-                <div class="col-xs-6">
-                    <% @songs.each do |song|  %>
-                        <p class="source list-group-item"><%= link_to 'Song', song.url %> &nbsp &nbsp
+
+                        <p class="source list-group-item">
                         <% if !(current_user.songs.exists?(url: song.url)) %>
-                            <%= link_to "Add", take_song_path(link: song.url), method: :patch,class:" badge badge-success text-white" %>
+                            <%= link_to "追加", take_song_path(link: song.url), method: :patch,class:" badge badge-success text-white" %> &nbsp 
+                        <% else %>
+                            &nbsp   &nbsp  &nbsp   &nbsp&nbsp&nbsp
                         <% end %>
+                        <%= link_to 'Play', song.url %> 
+                        <%= truncate(song.title.to_s, length: 25) %>  <b>by <%= truncate(song.artist.to_s, length: 25) %></b>
                         </p>
                     <% end %>
                 </div>
@@ -21,4 +21,3 @@
         </div>
     </div>
 </div>
-
