--- a/app/views/user/mylist.html.erb
+++ b/app/views/user/mylist.html.erb
@@ -1,18 +1,14 @@
 Lising all <b class="text-success"><%= current_user.songs.count%></b> songs that I'm following
 
-<div class="container">
     <div class="entry">
         <div class="container">
             <div class="row">
                 <div class="col-xs-6">
                     <% @songs.each do |song|  %>
-                        <p class="list-group-item"><%= truncate(song.title.to_s, length: 25) %> <b>by <%= truncate(song.artist.to_s, length: 25)%></b></p> 
-                    <% end %>
-                </div>
-                <div class="col-xs-6">
-                    <% @songs.each do |song|  %>
-                        <p class="source list-group-item"><%= link_to 'Song', song.url %> &nbsp &nbsp
-                        <%=link_to "Remove", favsong_path(song),method: :delete, data: {confirm: "Do you wanna save it?"},class:" badge badge-danger text-white" %>
+                        <p class="source list-group-item">
+                        <%= link_to 'Play', song.url,class:" badge badge-info text-white" %> 
+                        <%=link_to "消", favsong_path(song),method: :delete, data: {confirm: "Do you wanna save it?"},class:" badge badge-danger text-white" %>
+                        <%= truncate(song.title.to_s, length: 15) %> <b>by <%= truncate(song.artist.to_s, length: 10)%></b>
                         </p>
                     <% end %>
                 </div>
