--- a/app/views/friend/index.html.erb
+++ b/app/views/friend/index.html.erb
@@ -7,6 +7,7 @@ All other users
                 <% if !(other.email == current_user.email) %>
                     <p class="list-group-item">
                     <%= link_to other.email, save_following_path(email: other.email), method: :patch %>
+                    <br>
                     has <b class="text-danger"><%= other.songs.count %></b> songs.
 
                     And 
@@ -14,12 +15,14 @@ All other users
                     <% other.songs.each do |song| %>
                     
                         <% if current_user.songs.exists?(url: song.url) %>
-                            <% @count = @count +1 %>
+                            <% @count+=1 %>
                         <% end %>
 
                     <% end %>
 
                     <b class="text-danger"><%= @count %></b> songs in common.
+                    <br>
+                    Following <b class="text-danger"><%= other.countnum %></b> artists
                     </p>
                 <% end %>
             <% end %>
