--- a/app/views/user/mylist_artist.html.erb
+++ b/app/views/user/mylist_artist.html.erb
@@ -21,6 +21,12 @@
             <% end %>
             <b class="text-danger"><%= @mycount %></b> of <b class="text-success">
              
+            <% @changed = URI::encode(songartist) %>
+            <% linkurl = "https://www.ufret.jp/artist.php?data="+@changed %>
+            <% doc = Nokogiri::HTML(open(linkurl)) %>
+            <% @artistnum = doc.xpath(" //a [@class= 'list-group-item list-group-item-action normal-chord']/strong").children.count %>
+
+            <%= @artistnum %></b> total songs.
         </p>
     <% end %>
 
