Done withs search

--- a/app/views/search/result.html.erb
+++ b/app/views/search/result.html.erb
@@ -1,15 +1,33 @@
-<div class="col-xs-6">
-    <% @songs.each do |song|  %>
+<div class="container">
+    <div class="entry"> 
+        <h3 class="h3">The result of [ <%= params[:search] %> ]</h3>
+        <p> Showing <b class="text-success" ><%= @all - 22  %></b> songs.  </p>
+        <p><%= link_to '戻る', search_path %></p>
 
-        <p class="source list-group-item">
-        <% if !(current_user.songs.exists?(url: song.url)) %>
-            <%= link_to "追加", take_song_path(link: song.url), method: :patch,class:" badge badge-success text-white" %> &nbsp 
-        <% else %>
-            &nbsp   &nbsp  &nbsp   &nbsp&nbsp&nbsp
-        <% end %>
-        <%= link_to 'Play', song.url %> 
-        <%= truncate(song.title.to_s, length: 25) %>  <b>by <%= truncate(song.artist.to_s, length: 25) %></b>
-        </p>
-        
-    <% end %>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <% @links.each do |link|  %>
+                            <p class="source list-group-item">
+                            <% if !(current_user.songs.where(url: "https://www.ufret.jp/" +link).first) %>
+                                <%= link_to "追加", save_song_path(link: link), method: :patch,class:" badge badge-success text-white" %>
+                            <% else %> &nbsp &nbsp &nbsp &nbsp
+                            <% end %>
+                            <a target="_blank" href=https://www.ufret.jp/<%=link %>>Play</a> &nbsp
+
+                            <% songname = get_songname(link) %>
+                            <% artistname = get_artistname(link) %>
+
+                            <%= truncate(songname.to_s, length: 15) %>
+                             <b>by <%= truncate(artistname.to_s, length: 15) %></b>
+                            </p>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <p class="source">Scraped from <a target="_blank" href=<%=@url %>>Ufret.com</a></p>
 </div>
