--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -15,3 +15,12 @@
 <%= link_to 'ら', save_hiragana_path(hira: "ra"), method: :patch, class: "font-weight-bold text-danger " %> <%= link_to 'り', save_hiragana_path(hira: "ri"), method: :patch %> <%= link_to 'る', save_hiragana_path(hira: "ru"), method: :patch %> <%= link_to 'れ', save_hiragana_path(hira: "re"), method: :patch %> <%= link_to 'ろ', save_hiragana_path(hira: "ro"), method: :patch %>&nbsp &nbsp
 <%= link_to 'わ', save_hiragana_path(hira: "wa"), method: :patch, class: "font-weight-bold text-danger " %> <%= link_to 'ん', save_hiragana_path(hira: "nn"), method: :patch %> 
 
+<div class='search-area'>
+<br>
+  <h3>Search Songs</h3>
+  <p>検索</p>
+    <%= form_tag(search_specific_song_list_path,:method => 'get') do %>
+      <%= text_field_tag :search %>
+      <%= submit_tag 'Search', :name => nil %>
+    <% end %>
+</div>
