--- a/app/views/search/fast.html.erb
+++ b/app/views/search/fast.html.erb
@@ -4,6 +4,9 @@
         <p> Showing <b class="text-success" ><%= @all - 22  %></b> songs.  </p>
         <p><%= link_to '戻る', search_path %></p>
 
+        <% @ig =  0 %>
+        <% @igs = 0 %>
+
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
@@ -14,14 +17,25 @@
                             <% else %> &nbsp &nbsp &nbsp &nbsp&nbsp
                             <% end %>
                             <a target="_blank" href=https://www.ufret.jp/<%=link %>>Play</a> &nbsp
-                            </p>
-                        <% end %>
-                    </div>
-                    <div class="col-xs-6">
+                            <%= truncate(@songs[@ig].to_s, length: 10) %>
+                            <% @ig += 1 %>
+                            <b> by </b>
 
-                        <% @songs.each do |song|  %>
-                            <p class="list-group-item"><%= truncate(song.to_s, length: 10) %></p>
-                            
+                            <% if (@artists[@igs].to_s == "動画プラス") || (@artists[@igs].to_s == "初心者向け簡単コード")  %>
+                                <% @igs += 1 %>
+                                <% if @artists[@igs].to_s == "初心者向け簡単コード" %>
+                                    <% @igs += 1 %>
+                                    <b> <%= truncate(@artists[@igs].to_s, length: 10) %></b>
+                                    <% @igs += 1 %> 
+                                <% else %>
+                                    <b> <%= truncate(@artists[@igs].to_s, length: 10) %></b>
+                                    <% @igs += 1 %> 
+                                <% end %>
+                            <% else %>
+                                <b> <%= truncate(@artists[@igs].to_s, length: 10) %></b>
+                                <% @igs += 1 %>
+                            <% end %>
+                            </p>
                         <% end %>
                     </div>
                 </div>
