--- a/app/views/search/fast.html.erb
+++ b/app/views/search/fast.html.erb
@@ -17,7 +17,7 @@
                                 <%= link_to "追加", save_song_path(link: link), method: :patch,class:" badge badge-success text-white" %>
                             <% else %> &nbsp &nbsp &nbsp &nbsp&nbsp
                             <% end %>
-                            <a target="_blank" href=https://www.ufret.jp/<%=link %>>Play</a> &nbsp
+                            <%= link_to 'Play', plusone_path(link: "https://www.ufret.jp//"+link), method: :patch,class:" badge badge-info text-white" %> 
                             <%= truncate(@songs[@ig].to_s, length: 10) %>
                             <% @ig += 1 %>
                             <b> by </b>
