--- a/app/views/user/artist_with_limit.html.erb
+++ b/app/views/user/artist_with_limit.html.erb
@@ -3,7 +3,7 @@ Listing <%= current_user.list %> with the only songs you followimng
 <% current_user.songs.each do |song|  %>
     <% if song.artist == current_user.list %>
         <p class="source list-group-item">
-        <%= link_to 'Play', song.url,class:" badge badge-info text-white" %> 
+        <%= link_to 'Play', plusone_path(link: song.url), method: :patch,class:" badge badge-info text-white" %> 
         <%=link_to "消", favsong_path(song),method: :delete, data: {confirm: "Do you wanna delete it?"},class:" badge badge-danger text-white" %>
         <%= truncate(song.title.to_s, length: 15) %> <b>by <%= truncate(song.artist.to_s, length: 10)%></b>
         </p>
