--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,11 @@
 <div class="container" id="home-container">
   <div class="jumbotron text-center text-white">
-    <h1 class="display-4">Nfret</h1>
+    <h1 class="display-4 text-success">Nfret</h1>
     <p class="lead">Ufretは好きだけど月額６５０円は払いたくない人（オレ）に向けて</p>
     <hr class="my-4">
+    <p class="badge badge-info text-white">Total user: <%= User.all.count %><br>
+    Total play times: <%= @totalnum %><br>
+    Total favored songs: <%= Song.count %><br></p>
     <% if !(current_user)%>
         <%= link_to "SIGN UP",  new_user_registration_path, class: "btn btn-success btn-lg" %>
         &nbsp
