--- a/app/views/friend/following_artist.html.erb
+++ b/app/views/friend/following_artist.html.erb
@@ -1,3 +1,5 @@
+
+
 <% if current_user.songs.count != 0 %>
     <b class="text-info"><%= @theuser.email %></b>
     <br>
@@ -21,11 +23,7 @@
                     <% @mycount +=1 %>
                 <% end %>
             <% end %>
-            <b class="text-danger"><%= @mycount %></b> of <b class="text-success">
-
-            <% songartist = change_artist(songartist) %>
-
-            <%= @artistnum  %></b> total songs.
+            <b class="text-danger"><%= @mycount %></b> songs. 
         </p>
     <% end %>
 </div>
