--- a/app/views/user/mylist_artist.html.erb
+++ b/app/views/user/mylist_artist.html.erb
@@ -19,7 +19,7 @@
                     <% @mycount +=1 %>
                 <% end %>
             <% end %>
-            <b class="text-danger"><%= @mycount %></b> of <b class="text-success">
+            <b class="text-danger"><%= @mycount %></b> songs
 
         </p>
     <% end %>
