--- a/app/views/friend/artist_following_with_limit.html.erb
+++ b/app/views/friend/artist_following_with_limit.html.erb
@@ -9,7 +9,9 @@
 
 <% @inst = change_artist(@inst) %>
 
-You are following <b class="text-danger"><%= @mycount %></b> of <b class="text-success"><%= @artistnum  %></b> total songs.
+You are following <b class="text-danger"><%= @mycount %></b> of <b class="text-success">
+<%= link_to @artistnum, jumplinkfriend_path(link: @theuser.list), method: :patch %>
+</b> total songs.
 
 
 <p><%= link_to '戻る', following_artist_path %></p>
